--- a/.env.development.local
+++ b/.env.development.local
@@ -1,6 +1,9 @@
 PORT = 5500
 
+SERVER_URL = http://localhost:5500/
+
 NODE_ENV=development
+
 
 DB_URI=mongodb+srv://ankitojha07:pWgEIVSDbWyHSiCu@subscriptioncluster.9opqd.mongodb.net/subscriptionTracker?retryWrites=true&w=majority&appName=subscriptionCluster
 
